
Others Notes:
    - added to lexicon/en
    - added templates/mgr/fields
    - added to db table vxResource: version_number, version_notes, version_sendto 
    - added to versionx.class.php, verionx.plugin.php and vxresource.class.php
    - added system event: OnBeforeDocFormSave, OnDocFormRender and OnLoadWebDocument for plugin and to post in draft data
    - added system settings: 
        versionx.workflow.resource, versionx.workflow.resource.notice.approvetpl,
        versionx.workflow.resource.notice.submittpl, versionx.workflow.resource.notice.email
    - added 3 chunks for email notices


++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc4       ++
++   Released on 2012-07-19   ++
++++++++++++++++++++++++++++++++
Fix critical issue on Firefox (possibly others too) affecting TVs.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc3       ++
++   Released on 2012-07-08   ++
++++++++++++++++++++++++++++++++
Add Plugins UI to the component and as tab on the plugin update panel.
Add Snippets UI to the component and as tab on the snippets update panel.
#16 Add a cachebust to javascripts based on version number to eliminate browser cache issues.
#32 Fix E_NOTICE error in VersionX.checkLastVersion possibly causing install/save issues.
#27 Fix resolvers preventing proper uninstall
Clean up javascript to satisfy PhpStorm's JS validation.
Re-align form buttons and tiny bit of UI cleanup.
#31 Fix action bar and VersionX component in IE
#29 Fix issue with empty grids until applying a filter in 2.2.4.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc2       ++
++   Released on 2012-05-28   ++
++++++++++++++++++++++++++++++++
Add Recent Resource Changes dashboard widget for 2.2+.
Add Chunks UI to the component, and tabs to the update panel.
Change TV grid to follow same column order as others
Change object field behavior from searching on IP to searching on name
Add versions tab to template variable update screens.