@@ -22,6 +22,11 @@
  *
 */
 class vxResource extends xPDOObject {
+    /**
+     * @param (array) $tv_values - the tv values of the current draft
+     */
+    protected $tv_values = array();
+    
     public static $excludeFields = array(
         'version_id',
         'saved',
@@ -121,12 +126,22 @@ class vxResource extends xPDOObject {
 
         foreach ($tvs as $tv) {
             // $this->xpdo->log(xPDO::LOG_LEVEL_ERROR, '[VersionX:vxResource/'.$type.'] Resource: ' . $this->get('content_id') . ' | Setting TV ' . $tv['id'] . ' to ' . $tv['value']);
-            if (!$resource->setTVValue($tv['id'], $tv['value'])) {
-                // $this->xpdo->log(xPDO::LOG_LEVEL_ERROR, '[VersionX:vxResource/'.$type.'] Resource: ' . $this->get('content_id') . ' | Unable of setting TV ' . $tv['id'] . ' to ' . $tv['value']);
-                return false;
+            if ( $type == 'revert' ) {
+                if (!$resource->setTVValue($tv['id'], $tv['value'])) {
+                    // $this->xpdo->log(xPDO::LOG_LEVEL_ERROR, '[VersionX:vxResource/'.$type.'] Resource: ' . $this->get('content_id') . ' | Unable of setting TV ' . $tv['id'] . ' to ' . $tv['value']);
+                    return false;
+                }
             }
+            // save data to an array:
+            $this->tv_values[$tv['id']] = $tv['value'];
         }
         return $resource;
     }
+    /**
+     * Get the TV Value array(ID => Value )
+     */
+     public function getTVs() {
+         return $this->tv_values;
+     }
 }
 
