@@ -22,6 +22,7 @@ Others Notes:
     - added to db table vxResource: version_number, version_notes, version_sendto 
     - added to versionx.class.php, verionx.plugin.php and vxresource.class.php
     - added system event: OnBeforeDocFormSave, OnDocFormRender and OnLoadWebDocument for plugin and to post in draft data
+        OnResourceTVFormRender - to load TV Values of Drafts
     - added system settings: 
         versionx.workflow.resource, versionx.workflow.resource.notice.approvetpl,
         versionx.workflow.resource.notice.submittpl, versionx.workflow.resource.notice.email
